2007-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c, common-src/bsdtcp-security.c,
	  common-src/bsdudp-security.c,
	  common-src/stream.c: Don't call check_addrinfo_give_name.
	* common-src/security-util.c (check_addrinfo_give_name): Always log
	                                                         error message.

2007-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c Set default length/filemark correctly.
	* man/xml-source/amanda.conf.5.xml: Document they are in kbytes.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* config/gnulib/gnulib-common.m4: New file.
	* config/gnulib.m4i: Load config/gnulib/gnulib-common.m4.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c (do_sendpkt): Send packet if handle != NULL.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c, common-src/conffile.h,
	  server-src/diskfile.c: Keep different list for exclude file and list.

2007-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c (read_file): Don't count first header twice.

2007-01-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Fix split-dump accounting.

2007-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Use prompt_in.

2007-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, common-src/bsd-security.c,
	  common-src/bsdtcp-security.c, common-src/bsdudp-security.c,
	  common-src/dgram.c, common-src/security-util.c,
	  common-src/stream.c,
	  common-src/util.c: Replace HAVE_IPV6 by WORKING_IPV6.
	* configure.in: Define HAVE_IPV6 if IPv6 is working.

2007-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-chio.pl.in, changer-src/chg-iomega.pl.in,
	  changer-src/chg-rth.pl.in, dumper-src/amgtar.pl.in,
	  server-src/amoverview.pl.in, server-src/amstatus.pl.in,
	  server-src/amtoc.pl.in: Clean ENV and set PATH.
