@@ -26,6 +26,7 @@ DISTCLEANFILES =
 MAINTAINERCLEANFILES =
 
 AM_CPPFLAGS =
+AM_CFLAGS =  -Wall -g
 
 noinst_LTLIBRARIES += libgnu.la
 
